--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
           <span class="input-icon"><i class="fa-solid fa-key"></i></span><br /><br />
     
           <div class="flex-row">
-            <input name="persist" type="checkbox" />
-            <label for="persist">Keep me logged in.</label>
+            <input id="persist" name="persist" type="checkbox" />
+            <label for="persist">Keep me logged in</label>
             <input id="logsubmit" type="submit" value="Login" />
           </div>
           <br /><br />
